tests/baselines/reference/duplicateLabel1.errors.txt
==== tests/cases/compiler/duplicateLabel1.ts (1 errors) ====
    target:
    target:
    ~~~~~~
!!! duplicateLabel1.ts(2,1): error TS2000: Duplicate identifier 'target'.
    while (true) {
    }